added frontend and updated backend endpoints
