# backend/src/routes/starWars.ts
@@ -2,4 +2,4 @@ import { Router } from "express"
 import { StarWarsController } from '../controllers/starWars';
 export const StarWarsRouter = Router();
 
-StarWarsRouter.get('/api/starWars/millenniumFalcon', StarWarsController.getMillenniumFalconData);
+StarWarsRouter.get('/api/starWars/starships', StarWarsController.getStarshipData);
